--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "less": "^2.7.3",
     "moment": "^2.20.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-select": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
