--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "moment": "^2.20.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-select": "^2.4.0"
+    "vue-select": "^2.4.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
