--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "font-awesome-webpack": "0.0.5-beta.2",
     "less": "^2.7.3",
     "moment": "^2.20.1",
+    "momentjs": "^2.0.0",
+    "npm": "^5.7.1",
     "vue": "^2.5.2",
+    "vue-flash-message": "^0.4.1",
     "vue-router": "^3.0.1",
     "vue-select": "^2.4.0",
     "vuex": "^3.0.1"
